; ModuleID = '/home/carl/AnghaBench/netdata/registry/extr_registry_log.c_registry_log_open.c'
source_filename = "/home/carl/AnghaBench/netdata/registry/extr_registry_log.c_registry_log_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@registry = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@_IOLBF = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [48 x i8] c"Cannot set line buffering on registry log file.\00", align 1
@.str.2 = private unnamed_addr constant [99 x i8] c"Cannot open registry log file '%s'. Registry data will be lost in case of netdata or server crash.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @registry_log_open() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %6 = call i32 @fclose(i64 %5)
  br label %7

7:                                                ; preds = %4, %0
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %9 = call i64 @fopen(i32 %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i64 %9, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %7
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %14 = load i32, i32* @_IOLBF, align 4
  %15 = call i64 @setvbuf(i64 %13, i32* null, i32 %14, i32 0)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  br label %19

19:                                               ; preds = %17, %12
  store i32 0, i32* %1, align 4
  br label %23

20:                                               ; preds = %7
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %22 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([99 x i8], [99 x i8]* @.str.2, i64 0, i64 0), i32 %21)
  store i32 -1, i32* %1, align 4
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @fclose(i64) #1

declare dso_local i64 @fopen(i32, i8*) #1

declare dso_local i64 @setvbuf(i64, i32*, i32, i32) #1

declare dso_local i32 @error(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
